<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_title">My Nanodegree Apps!</string>
    <string name="app1">SPOTIFY STREAMER</string>
    <string name="app2">SCORES APP</string>
    <string name="app3">LIBRARY APP</string>
    <string name="app4">BUILD IT BIGGER</string>
    <string name="app5">BACON READER</string>
    <string name="app6">MY APP</string>
</resources>
