<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/padding_top"
        android:textSize="@dimen/text_size_large"/>

    <LinearLayout
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_top"
        android:orientation="vertical">

        <Button
            android:id="@+id/app1"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app1"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_normal"
            android:background="@color/orange"
            android:layout_marginBottom="@dimen/spacing_between_elements"
            android:onClick="displayToast"/>

        <Button
            android:id="@+id/app2"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app2"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_normal"
            android:background="@color/orange"
            android:layout_marginBottom="@dimen/spacing_between_elements"
            android:onClick="displayToast"/>

        <Button
            android:id="@+id/app3"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app3"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_normal"
            android:background="@color/orange"
            android:layout_marginBottom="@dimen/spacing_between_elements"
            android:onClick="displayToast"/>

        <Button
            android:id="@+id/app4"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app4"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_normal"
            android:background="@color/orange"
            android:layout_marginBottom="@dimen/spacing_between_elements"
            android:onClick="displayToast"/>

        <Button
            android:id="@+id/app5"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app5"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_normal"
            android:background="@color/orange"
            android:layout_marginBottom="@dimen/spacing_between_elements"
            android:onClick="displayToast"/>

        <Button
            android:id="@+id/app6"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app6"
            android:textSize="@dimen/text_size_normal"
            android:background="@color/red"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/padding_bottom"
            android:onClick="displayToast"/>

    </LinearLayout>

</RelativeLayout>
